tests/syntactic/printsize_directive/printsize_directive.dl
.decl A(x:number)
A(1).
A(2).

.decl B(x:number)
B(x) :- A(x).
.printsize B
